Fixed Navbar Bugs, mainly the dropdown overflow being hidden

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
     padding: 0;
     font-family: 'Kumbh Sans',sans-serif;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 /* Navbar Section*/
